# rust-nano-vm

./: .dockerignore  .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  Dockerfile  Dockerfile.kvm  Dockerfile.web  LICENSE-APACHE  LICENSE-MIT  README.md  deny.toml
.github/workflows/: ci.yml  docker.yml  kvm-ci.yml  npm-publish.yml  python-publish.yml  release.yml  smoke.yml  web.yml
clients/python/: .gitignore  README.md  pyproject.toml
clients/python/src/nanovm/: __init__.py  aio.py  cli.py
clients/python/src/nanovm/agents/: __init__.py  langchain.py  openai.py
clients/python/tests/: test_agent_adapters.py  test_async_client.py  test_cli.py  test_sandbox_actions.py  test_sandbox_context_and_marketplace.py  test_smoke.py
clients/typescript/: README.md  package-lock.json  package.json  tsconfig.json
clients/typescript/src/: agents.ts  index.ts
clients/typescript/test/: agents.test.ts  index.test.ts
crates/api-bench/: Cargo.toml  README.md
crates/api-bench/src/: main.rs
crates/bench/: Cargo.toml
crates/bench/src/: main.rs
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/control-plane/: Cargo.toml
crates/control-plane/examples/: demo.rs
crates/control-plane/src/: api.rs  audit.rs  audit_sink.rs  auth.rs  billing.rs  error.rs  exec_stream.rs  fork_quota.rs  keys.rs  lib.rs  marketplace.rs  marketplace_fork.rs  metrics.rs  ownership.rs  rate_limit.rs  request_id.rs  routes.rs  sandbox.rs  snapshot_export.rs  snapshot_store.rs  time.rs  warm_pool.rs
crates/control-plane/src/billing/: sqlite_billing_backend.rs  usage_reporter.rs
crates/control-plane/src/ownership/: sqlite_backend.rs
crates/control-plane/tests/: api.rs  rbac.rs
crates/guest-agent/: Cargo.toml
crates/guest-agent/src/: lib.rs  main.rs
crates/guest-agent/tests/: framed.rs
crates/nanovm-fleet/: Cargo.toml  README.md
crates/nanovm-fleet/src/: lib.rs
crates/nanovm-fleet/tests/: end_to_end.rs
crates/nanovm-jailer/: Cargo.toml  README.md
crates/nanovm-jailer/src/: lib.rs  main.rs
crates/nanovm-jailer/tests/: end_to_end.rs
crates/nanovm-mcp/: Cargo.toml  README.md
crates/nanovm-mcp/src/: client.rs  lib.rs  main.rs  mcp.rs  tools.rs
crates/nanovm-mcp/tests/: end_to_end.rs
crates/nanovm-vmm-child/: Cargo.toml  README.md
crates/nanovm-vmm-child/src/: lib.rs  main.rs
crates/nanovm-vmm-child/tests/: integration.rs
crates/proto/: Cargo.toml
crates/proto/src/: frame.rs  lib.rs
crates/snapshot/: Cargo.toml
crates/snapshot/fuzz/: Cargo.toml
crates/snapshot/fuzz/fuzz_targets/: backing_header.rs  manifest_json.rs
crates/snapshot/src/: lib.rs  runtime.rs  s3.rs  store.rs
crates/virtio-fs/: Cargo.toml
crates/virtio-fs/fuzz/: Cargo.toml
crates/virtio-fs/fuzz/fuzz_targets/: fuse_request.rs
crates/virtio-fs/src/: body.rs  dispatch.rs  lib.rs  std_fs.rs
crates/virtio-queue/: Cargo.toml
crates/virtio-queue/fuzz/: Cargo.toml
crates/virtio-queue/fuzz/fuzz_targets/: avail_ring.rs  desc_chain.rs  packed_ring.rs  used_ring.rs
crates/virtio-queue/src/: lib.rs
crates/virtio-vsock/: Cargo.toml
crates/virtio-vsock/fuzz/: Cargo.toml
crates/virtio-vsock/fuzz/fuzz_targets/: vsock_header.rs
crates/virtio-vsock/src/: conn_table.rs  device.rs  lib.rs  mmio.rs  queue.rs
crates/vm-core/: Cargo.toml
crates/vm-core/src/: lib.rs
crates/vm-kvm/: Cargo.toml
crates/vm-kvm/examples/: hello_kvm.rs
crates/vm-kvm/src/: cgroups.rs  lib.rs  seccomp.rs  vmstate.rs
crates/vm-kvm/tests/: agent_init_boot.rs  bzimage_boot.rs  cgroups_caps_applied.rs  exec_node_boot.rs  exec_python_boot.rs  exec_roundtrip_boot.rs  exec_stream_boot.rs  file_roundtrip_boot.rs  flat_binary.rs  initramfs_boot.rs  seccomp_blocks_execve.rs  snapshot_fork_many_boot.rs  snapshot_restore_boot.rs  vsock_driver_ok_boot.rs  vsock_probe_boot.rs
crates/vm-mock/: Cargo.toml
crates/vm-mock/src/: lib.rs
crates/vmm-ipc/: Cargo.toml  README.md
crates/vmm-ipc/src/: framing.rs  lib.rs
crates/vmm-ipc/tests/: end_to_end.rs
deploy/: ONBOARDING.md  README.md
deploy/enterprise/: README.md
deploy/grafana/dashboards/: nanovm-overview.json
deploy/helm/nanovm/: Chart.yaml  values.yaml
deploy/live-demo/: .gitignore  README.md  down-local.sh  down.sh  load.sh  tail-local.sh  tail.sh  up-local.sh  up.sh
deploy/live-demo/compose/: docker-compose.local.yml  docker-compose.yml  grafana-dashboards.yml  grafana-datasource.yml  prometheus.local.yml  prometheus.yml.tpl
deploy/marketplace/: README.md  example.json
deploy/prometheus/: alerts.yaml  prometheus-scrape.yaml
docs/: PLAN.md  architecture.md  comparison.md  enterprise-audit.md  index.html  kvm-host.md  kvm-runner.md  landing.html  local-llm-agent.md  openapi.json  rbac.md  runbook.md  saas-billing.md  threat-model.md
docs/blog/: 01-mmap-private.md  02-snapshot-restore.md  03-regulated-ai-sandboxes.md  04-12ms-eval-fanout.md  05-sandbox-for-claude-code.md  06-langchain-js-execute-python.md
docs/integration/: nanolambda-readme-draft.md
docs/launch/: README.md  hn-show.md  launch-day.md  public-flip.md  reddit-rust.md  response-templates.md  twitter-thread.md
install/: README.md
install/brew/: nanovm.rb  nanovm.rb.template
install/mac/: lima-setup.sh
install/wsl2/: install.sh
packaging/seccomp/: README.md  nanovm-control-plane.json
packaging/systemd/: README.md  nanovm-control-plane.env.example  nanovm-control-plane.service
public/: project-description.md
scripts/: smoke.sh
tools/initramfs/: README.md  build-initramfs.sh  init.c
tools/kernel/: .gitignore  README.md  build-tiny-kernel.sh  tinyconfig.fragment
tools/kvm-images/: README.md  fetch.sh
tools/marketplace-snapshots/: README.md  build.sh  publish.sh
tools/node-rootfs/: Dockerfile  README.md  build.sh
tools/python-rootfs/: .gitignore  Dockerfile  README.md  build.sh
web/: .env.example  .gitignore  README.md  next.config.ts  package-lock.json  package.json  postcss.config.js  tailwind.config.ts
web/app/: globals.css  layout.tsx  opengraph-image.tsx  page.tsx
web/components/: LiveForkBenchmark.tsx
web/lib/: api.ts  og.tsx  session.ts
(+34 files in other folders)
