[workspace]
resolver = "2"
members = [
    "crates/vm-core",
    "crates/vm-mock",
    "crates/vm-kvm",
    "crates/virtio-fs",
    "crates/virtio-queue",
    "crates/virtio-vsock",
    "crates/snapshot",
    "crates/guest-agent",
    "crates/control-plane",
    "crates/proto",
    "crates/cli",
    "crates/bench",
    "crates/nanovm-mcp",
    "crates/vmm-ipc",
    "crates/nanovm-vmm-child",
    "crates/nanovm-jailer",
    "crates/nanovm-fleet",
]

[workspace.package]
version = "0.0.3"
edition = "2021"
rust-version = "1.94"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/ip888/Rust-nano-vm"
authors = ["Rust-nano-vm contributors"]

[workspace.dependencies]
# Local crates
vm-core = { path = "crates/vm-core", version = "0.0.3" }
vm-mock = { path = "crates/vm-mock", version = "0.0.3" }
vm-kvm = { path = "crates/vm-kvm", version = "0.0.3" }
proto = { path = "crates/proto", version = "0.0.3" }
virtio-fs = { path = "crates/virtio-fs", version = "0.0.3" }
virtio-queue = { path = "crates/virtio-queue", version = "0.0.3" }
virtio-vsock = { path = "crates/virtio-vsock", version = "0.0.3" }
snapshot = { path = "crates/snapshot", version = "0.0.3" }
control-plane = { path = "crates/control-plane", version = "0.0.3" }
vmm-ipc = { path = "crates/vmm-ipc", version = "0.0.3" }
nanovm-fleet = { path = "crates/nanovm-fleet", version = "0.0.3" }

# External
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.5", features = ["derive", "env"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
anyhow = "1.0"
axum = "0.7"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal", "net"] }
tokio-stream = "0.1"
tower = "0.5"
tower-http = { version = "0.5", features = ["trace"] }
http-body-util = "0.1"
reqwest = { version = "0.12", features = ["json", "blocking"], default-features = false }
vsock = "0.5"
base64 = "0.22"
seccompiler = "0.5"

[workspace.lints.rust]
unsafe_op_in_unsafe_fn = "warn"
missing_debug_implementations = "warn"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
todo = "allow"
