[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nanovm"
version = "0.1.0"
description = "Python client for rust-nano-vm — a single-binary Rust microVM with ~12 ms cold start for AI-agent code execution."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "Apache-2.0 OR MIT" }
authors = [
    { name = "Rust-nano-vm contributors" },
]
keywords = ["microvm", "sandbox", "kvm", "rust-nano-vm", "ai-agent"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: System :: Distributed Computing",
    "Topic :: System :: Emulators",
]
dependencies = [
    "requests>=2.31",
]

[project.urls]
Homepage      = "https://github.com/ip888/Rust-nano-vm"
Repository    = "https://github.com/ip888/Rust-nano-vm"
Documentation = "https://github.com/ip888/Rust-nano-vm/tree/main/clients/python#readme"
Issues        = "https://github.com/ip888/Rust-nano-vm/issues"

[project.scripts]
# `pip install nanovm` puts a `nanovm` command on the user's PATH.
# CLI stores login state in the user config directory so `nanovm` can
# reuse one saved identity per host.
nanovm = "nanovm.cli:main"

[project.optional-dependencies]
# Async client — non-agent users who want `AsyncClient` on their own
# asyncio loop. Small dep footprint.
async = [
    "httpx>=0.27",
]
# LangChain agent adapter — plugs a nanovm sandbox into a LangChain /
# LangGraph agent as a first-class tool. Pulls the small, focused
# `langchain-core` (not the full `langchain` megapackage).
langchain = [
    "langchain-core>=0.3",
    "pydantic>=2",
]
# OpenAI Assistants / Responses API adapter — the schemas are plain
# dicts + strings, so no third-party runtime dependency is required.
# Extra exists as a marker for users installing everything with `pip
# install "nanovm[openai]"`; installs the same base package.
openai = []
# Bundle: install every agent adapter + async client at once.
agents = [
    "nanovm[async]",
    "nanovm[langchain]",
    "nanovm[openai]",
]
dev = [
    "pytest>=7",
    "pytest-asyncio>=0.21",
    "httpx>=0.27",
    "langchain-core>=0.3",
    "pydantic>=2",
]

[tool.setuptools.packages.find]
where = ["src"]
