[package]
name = "bench"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "nanovm-fork-bench: measures fork latency (P50/P95/P99) and host RSS for the snapshot/fork data plane."

[[bin]]
name = "nanovm-fork-bench"
path = "src/main.rs"

[dependencies]
vm-core.workspace = true
vm-kvm = { workspace = true, features = ["kvm"] }
clap.workspace = true
anyhow.workspace = true

[lints]
workspace = true
