[package]
name = "bench"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Latency + density benchmark harness for the rust-nano-vm snapshot/fork data plane. Reports cold-start p50/p95/p99 and per-fork Pss."
keywords = ["microvm", "benchmark", "snapshot", "kvm", "performance"]
categories = ["virtualization", "development-tools::profiling"]

[[bin]]
name = "nanovm-fork-bench"
path = "src/main.rs"

[dependencies]
vm-core.workspace = true
vm-kvm = { workspace = true }
control-plane.workspace = true
clap.workspace = true
anyhow.workspace = true
tokio.workspace = true

# The bench is a KVM-only tool, but enabling `vm-kvm/kvm` *unconditionally*
# turns the feature on for every other workspace member that depends on
# `vm-kvm` — including `cargo test --workspace` runs of `vm-kvm`'s own
# integration tests, which then require `/dev/kvm` in CI. Keep `kvm`
# opt-in here so `cargo build --workspace` (and CI's default test job)
# stays portable; users build the bench with `--features kvm`.
[features]
default = []
kvm = ["vm-kvm/kvm"]

[lints]
workspace = true
