[package]
name = "cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "`nanovm` — command-line interface for rust-nano-vm."

[[bin]]
name = "nanovm"
path = "src/main.rs"

[dependencies]
clap.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
# The CLI will drive vm-core/vm-mock/vm-kvm starting in M1; kept out of M0
# deps to avoid declaring unused-crate-deps. Re-add as commands start
# calling into them.

[lints]
workspace = true
