[package]
name = "cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "`nanovm` — command-line interface for rust-nano-vm."

[[bin]]
name = "nanovm"
path = "src/main.rs"

[dependencies]
clap.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
serde.workspace = true
serde_json.workspace = true
# Minimal blocking HTTP client for communicating with nanovm-control-plane.
# default-features = false drops the default TLS backend so the binary stays
# small; plain HTTP (localhost) is sufficient for local dev.
reqwest.workspace = true

[lints]
workspace = true
