[package]
name = "control-plane"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "REST control plane for rust-nano-vm: bearer-token auth, per-token fork quota, JSONL audit log, Prometheus metrics."
keywords = ["microvm", "rest", "axum", "control-plane", "kvm"]
categories = ["web-programming::http-server", "virtualization"]

[[bin]]
name = "nanovm-control-plane"
path = "src/bin/server.rs"

[[bin]]
name = "nanovm-openapi"
path = "src/bin/openapi.rs"

[dependencies]
vm-core.workspace = true
vm-mock.workspace = true
snapshot.workspace = true
axum.workspace = true
base64.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
tower.workspace = true
tower-http.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[dev-dependencies]
base64.workspace = true
http-body-util.workspace = true
tower = { workspace = true, features = ["util"] }
reqwest.workspace = true
tempfile = "3"

[lints]
workspace = true
