[package]
name = "control-plane"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "REST control plane for rust-nano-vm: bearer-token auth, per-token fork quota, JSONL audit log, Prometheus metrics."
keywords = ["microvm", "rest", "axum", "control-plane", "kvm"]
categories = ["web-programming::http-server", "virtualization"]

[[bin]]
name = "nanovm-control-plane"
path = "src/bin/server.rs"

[[bin]]
name = "nanovm-openapi"
path = "src/bin/openapi.rs"

[dependencies]
vm-core.workspace = true
vm-mock.workspace = true
# Process-fleet Hypervisor backend, gated by NANOVM_BACKEND=fleet
# at runtime. The dep stays in the default build because the
# control plane needs to be able to wire it on demand without a
# feature-flag rebuild — operators flip a single env var.
nanovm-fleet.workspace = true
# `s3` is propagated from the control-plane's own `s3` feature; the
# bin opts in via `cargo build --features s3` to ship a binary with
# durable S3 snapshot storage. The default build still works without
# it (filesystem store only).
snapshot.workspace = true
axum.workspace = true
base64.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
tower.workspace = true
tower-http.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[features]
default = []
# Adds the S3 snapshot store backend to the control plane. Forwards
# to the `snapshot/s3` feature so `aws-sdk-s3` only ships when the
# operator actually wants it.
s3 = ["snapshot/s3"]

[dev-dependencies]
base64.workspace = true
http-body-util.workspace = true
tower = { workspace = true, features = ["util"] }
reqwest.workspace = true
tempfile = "3"

[lints]
workspace = true
