[package]
name = "control-plane"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "REST control plane for rust-nano-vm: bearer-token auth, per-token fork quota, JSONL audit log, Prometheus metrics."
keywords = ["microvm", "rest", "axum", "control-plane", "kvm"]
categories = ["web-programming::http-server", "virtualization"]

[[bin]]
name = "nanovm-control-plane"
path = "src/bin/server.rs"

[[bin]]
name = "nanovm-openapi"
path = "src/bin/openapi.rs"

[dependencies]
vm-core.workspace = true
vm-mock.workspace = true
# Process-fleet Hypervisor backend, gated by NANOVM_BACKEND=fleet
# at runtime. The dep stays in the default build because the
# control plane needs to be able to wire it on demand without a
# feature-flag rebuild — operators flip a single env var.
nanovm-fleet.workspace = true
# `s3` is propagated from the control-plane's own `s3` feature; the
# bin opts in via `cargo build --features s3` to ship a binary with
# durable S3 snapshot storage. The default build still works without
# it (filesystem store only).
snapshot.workspace = true
axum.workspace = true
base64.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
tower.workspace = true
tower-http.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
# Optional SQLite backing for the OwnershipStore trait. Statically
# links libsqlite via `rusqlite/bundled` so a distroless runtime image
# doesn't need a system libsqlite3. Only pulled when the `sqlite`
# feature is on.
rusqlite = { version = "0.32", features = ["bundled"], optional = true }
# Stripe billing (POST /v1/signup, GET /v1/billing/portal). rustls
# variant so distroless doesn't need OpenSSL. Optional; only pulled
# when the `billing` feature is on.
reqwest = { workspace = true, features = ["json", "rustls-tls-webpki-roots"], optional = true }
# HMAC-SHA256 for Stripe webhook signature verification. Both crates
# are already in the dep tree via reqwest/rustls; declaring them
# directly keeps the billing module's use explicit + testable.
hmac = { version = "0.12", optional = true }
sha2 = { version = "0.10", optional = true }
# OS RNG for magic-link signup tokens. `getrandom` is transitively in
# the tree via reqwest/rustls; declaring 0.2 explicitly keeps the API
# stable across upstream churn (0.3+ renamed the entry point).
getrandom = { version = "0.2", optional = true }
# Marketplace fork endpoint pulls a snapshot tarball into the tenant's
# SnapshotStore on first fork. Both crates are optional so the fork
# endpoint stays behind its own feature gate — deployments that only
# want to list the marketplace catalogue (or don't want it at all)
# skip the download machinery entirely.
tar = { workspace = true, optional = true }
flate2 = { workspace = true, optional = true }

[features]
default = []
# Adds the S3 snapshot store backend to the control plane. Forwards
# to the `snapshot/s3` feature so `aws-sdk-s3` only ships when the
# operator actually wants it.
s3 = ["snapshot/s3"]
# Adds the SQLite OwnershipStore backend. Without this feature the
# ownership map is in-memory only (safe for single-tenant / mock
# demos, but multi-tenant SaaS loses org→VM mappings on restart).
# When on, set `NANOVM_OWNERSHIP_STORE=/path/to/nanovm.sqlite` at
# runtime to activate persistence.
sqlite = ["dep:rusqlite"]
# Adds POST /v1/signup + GET /v1/billing/portal endpoints. Implies
# `sqlite` (Stripe customer_id needs to survive control-plane
# restart). Wire STRIPE_SECRET_KEY, STRIPE_BILLING_PORTAL_RETURN_URL,
# NANOVM_SIGNUP_TOKEN at deploy time.
billing = ["dep:reqwest", "dep:hmac", "dep:sha2", "dep:getrandom", "sqlite"]
# Adds POST /v1/marketplace/snapshots/:name/fork — pulls the tarball
# named by each entry's `snapshot_url` into the tenant's SnapshotStore
# on first fork per tenant, then forks the local copy. Requires an S3
# or filesystem snapshot store to be configured
# (NANOVM_SNAPSHOT_STORE). Cached process-locally: a restart re-pulls
# on first fork (a persisted cache is a follow-up).
marketplace-fork = ["dep:reqwest", "dep:tar", "dep:flate2"]

[dev-dependencies]
base64.workspace = true
http-body-util.workspace = true
tower = { workspace = true, features = ["util"] }
reqwest.workspace = true
tempfile = "3"

[lints]
workspace = true
