[package]
name = "guest-agent"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "`nanovm-agent` — static musl `/init` that runs inside every rust-nano-vm sandbox; speaks the proto crate's framed RPC over virtio-vsock."
keywords = ["microvm", "musl", "vsock", "guest-agent", "sandbox"]
categories = ["virtualization"]

[[bin]]
name = "nanovm-agent"
path = "src/main.rs"

[dependencies]
proto.workspace = true
serde_json.workspace = true
vsock.workspace = true

[lints]
workspace = true
