[package]
name = "nanovm-mcp"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "MCP (Model Context Protocol) stdio bridge from Claude / Cursor / Claude Code to a rust-nano-vm sandbox-action API."
keywords = ["mcp", "nanovm", "ai-agent", "sandbox", "stdio"]
categories = ["command-line-utilities", "virtualization"]
readme = "README.md"

[[bin]]
name = "nanovm-mcp"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["io-std", "io-util"] }
tracing.workspace = true
tracing-subscriber.workspace = true
# Async reqwest with rustls so the binary stays linkable without a
# system OpenSSL on minimal hosts. `default-features = false` on the
# workspace dep means we name the features we actually want here.
reqwest = { workspace = true, features = ["rustls-tls"] }

[dev-dependencies]
serde_json.workspace = true
axum.workspace = true
tokio = { workspace = true, features = ["io-std", "io-util", "macros", "rt-multi-thread"] }

[lints]
workspace = true
