[package]
name = "proto"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Shared types for the agent-sandbox-proto (host <-> guest-agent RPC)."

[dependencies]
serde.workspace = true
serde_json.workspace = true

[lints]
workspace = true
