[package]
name = "proto"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Wire-format types for rust-nano-vm's host↔guest-agent RPC over virtio-vsock."
keywords = ["microvm", "rpc", "vsock", "wire-format", "sandbox"]
categories = ["virtualization", "encoding"]

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true

[lints]
workspace = true
