[package]
name = "snapshot"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Snapshot format and CoW backing-file layout for rust-nano-vm: portable manifest + page-aligned RAM image suitable for mmap(MAP_PRIVATE)."
keywords = ["snapshot", "microvm", "cow", "mmap", "virtualization"]
categories = ["virtualization", "filesystem"]
readme = "../../README.md"

[dependencies]
thiserror.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
# S3 backend is opt-in: enabling `s3` pulls in `aws-sdk-s3` and a
# couple dozen transitive crates. Keeping it off by default means
# `cargo build --workspace` stays portable and fast for anyone not
# using the S3 backend.
aws-config = { version = "1", optional = true, features = ["behavior-version-latest"] }
aws-sdk-s3 = { version = "1", optional = true }
tokio = { workspace = true, optional = true }

[features]
default = []
# Durable snapshot storage backed by any S3-compatible service:
# AWS S3, MinIO, Cloudflare R2, Wasabi, etc. Built on the
# AWS-blessed `aws-sdk-s3` so production IAM roles,
# instance profiles, and web-identity tokens work out of the box.
s3 = ["dep:aws-config", "dep:aws-sdk-s3", "dep:tokio"]

[lints]
workspace = true
