[package]
name = "virtio-fs"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "virtio-fs host<->guest filesystem integration: FUSE protocol framing for rust-nano-vm."

[dependencies]
thiserror.workspace = true

[lints]
workspace = true
