[package]
name = "virtio-fs"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Host-side virtio-fs (FUSE-over-virtio) framing + dispatch for rust-nano-vm."
keywords = ["virtio", "virtio-fs", "fuse", "microvm", "filesystem"]
categories = ["virtualization", "filesystem"]

[dependencies]
thiserror.workspace = true

[lints]
workspace = true
