[package]
name = "virtio-queue"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Split virtqueue primitives (descriptor table + flag constants) for rust-nano-vm."

[dependencies]
thiserror.workspace = true

[lints]
workspace = true
