[package]
name = "virtio-queue"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Split-virtqueue parsers (descriptor table, avail/used rings) shared across rust-nano-vm's virtio device implementations."
keywords = ["virtio", "virtqueue", "microvm", "ring", "kvm"]
categories = ["virtualization", "parser-implementations"]

[dependencies]
thiserror.workspace = true

[lints]
workspace = true
