[package]
name = "virtio-vsock"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "virtio-vsock transport for host<->guest-agent RPC. Placeholder; implementation lands in M2."

[dependencies]

[lints]
workspace = true
