[package]
name = "virtio-vsock"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Custom virtio-vsock device for host<->guest-agent RPC inside a microVM."
keywords = ["virtio", "vsock", "microvm", "kvm", "virtualization"]
categories = ["virtualization", "network-programming"]
readme = "../../README.md"

[dependencies]
thiserror.workspace = true

[lints]
workspace = true
