[package]
name = "vm-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "`Hypervisor` trait, VM and snapshot id types, and the error envelope shared by every backend in rust-nano-vm."
keywords = ["microvm", "hypervisor", "trait", "snapshot", "virtualization"]
categories = ["virtualization", "api-bindings"]

[dependencies]
thiserror.workspace = true
serde = { workspace = true, optional = true }

[features]
default = []
serde = ["dep:serde"]

[lints]
workspace = true
