[package]
name = "vm-kvm"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "KVM-backed Hypervisor implementation. Linux-only, feature-gated."

[dependencies]
vm-core.workspace = true
kvm-ioctls = { version = "0.24.0", optional = true }
vm-memory = { version = "0.18.0", default-features = false, features = ["backend-mmap"], optional = true }
linux-loader = { version = "0.13.2", features = ["bzimage"], optional = true }

# Real KVM deps (kvm-ioctls, vm-memory, linux-loader) arrive with the `kvm`
# feature in M1. Keeping them out of the default build keeps
# `cargo build --workspace` fast and portable (incl. in the gVisor sandbox,
# which has no /dev/kvm).

[features]
default = []
# Enable the real KVM backend. Requires Linux + /dev/kvm at runtime.
kvm = ["dep:kvm-ioctls", "dep:vm-memory", "dep:linux-loader"]

[lints]
workspace = true
